--- a/src/styles.css
+++ b/src/styles.css
@@ -6,32 +6,38 @@ body {
   
   .header {
     display: flex;
-    background-color: #333;
+    background-color: #000;
     color: white;
-    justify-content: space-between;
+    justify-content: flex-end;
     padding: 10px;
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
-  }
-  
-  .header ul {
+}
+
+.header ul {
     list-style: none;
     display: flex;
+    justify-content: space-between;
     flex-direction: row;
-    justify-content: space-around;
   }
   
   .header li {
     margin-right: 20px;
     cursor: pointer;
   }
+
+  .header .logo {
+    width: 168px;
+    height: auto;
+  }
   
   .footer {
     display: flex;
     flex-direction: column;
-    background-color: #333;
+    justify-content: center;
+    background-color: #000;
     color: white;
     position: fixed;
     bottom: 0;
