--- a/src/styles.css
+++ b/src/styles.css
@@ -6,9 +6,9 @@ body {
 
 .header {
     display: flex;
+    align-items: center;
     background-color: #000;
     color: white;
-    justify-content: flex-end;
     padding: 10px;
     position: fixed;
     top: 0;
@@ -16,11 +16,15 @@ body {
     right: 0;
 }
 
+.logo {
+    margin-right: 20px;
+}
+
 .header ul {
     list-style: none;
     display: flex;
-    justify-content: space-between;
-    flex-direction: row;
+    margin: 0;
+    padding: 0;
 }
 
 .header li {
@@ -43,7 +47,7 @@ body {
     bottom: 0;
     left: 0;
     width: auto;
-    height: 100%;
+    height: 90%;
 }
 
 .footer .icon {
@@ -54,4 +58,10 @@ body {
 
 .footer .icon:hover {
     background-color: #444;
+}
+
+.footer small {
+    margin-top: 100px;
+    color: #fff;
+    transform: rotate(270deg);
 }
