--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,8 @@
-/* styles.css */
+* {
+font-family: 'Roboto', sans-serif;
+font-size: 16px;
+
+}
 body {
     margin: 0;
     padding: 0;
@@ -65,7 +69,81 @@ body {
     transform: rotate(270deg);
 }
 
-.title {
+.title { margin: 50px 0 50px 150px }
+
+.container {
+    display: flex;
+    justify-content: space-between;
     margin-left: 150px;
-    margin-top: 100px;
+
+}
+
+.first-section{
+    display: flex;
+    flex-direction: column;
+}
+
+.column {
+    flex: 1;
+    text-align: center;
+}
+
+.activity {
+    height: 200px;
+    background-color: #f0f0f0;
+    color: #000;
+    border-radius: 5px;
+}
+
+.row {
+    display: flex;
+    justify-content: space-between;
+}
+
+.square {
+    background-color: #e74c3c;
+    color: white;
+    text-align: center;
+    width: 258px;
+    height: 263px;
+    border-radius: 5px;
+}
+.session { background-color: red }
+.intense { background-color: rgb(17, 17, 17) }
+.score { background-color: #f0f0f0 }
+
+.time {
+    margin-top: 65px;
+    gap: 10px;
+}
+
+.side-section { margin-right: 200px }
+.side-section .column { 
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.tracks {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 258px;
+    height: 124px;
+    background-color: rgb(216, 216, 216);
+    padding-left: 35px;
+    gap: 20px;
+    border-radius: 5px;
+}
+.stats {
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+}
+.stats p { margin: 0 }
+.stats h2 { margin: 0 }
+
+.icons {
+    width: 50px;
+    height: 50px;
+    background-color: #3498db;
 }
