--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,9 @@
 * {
-font-family: 'Roboto', sans-serif;
-font-size: 16px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
 
 }
+
 body {
     margin: 0;
     padding: 0;
@@ -20,7 +21,9 @@ body {
     height: 5vh;
 }
 
-.logo { margin-right: 20px }
+.logo {
+    margin-right: 20px
+}
 
 .header ul {
     list-style: none;
@@ -57,7 +60,9 @@ body {
     cursor: pointer;
 }
 
-.footer .icon:hover { background-color: #444 }
+.footer .icon:hover {
+    background-color: #444
+}
 
 .footer small {
     margin-top: 100px;
@@ -67,7 +72,9 @@ body {
     font-size: 8px;
 }
 
-.title { margin: 50px 0 50px 150px }
+.title {
+    margin: 50px 0 50px 150px
+}
 
 .container {
     display: flex;
@@ -76,7 +83,7 @@ body {
 
 }
 
-.first-section{
+.first-section {
     display: flex;
     flex-direction: column;
 }
@@ -106,21 +113,34 @@ body {
     height: 263px;
     border-radius: 5px;
 }
-.session { background-color: red }
-.intense { background-color: rgb(17, 17, 17) }
-.score { background-color: #f0f0f0 }
+
+.session {
+    background-color: red
+}
+
+.intense {
+    background-color: rgb(17, 17, 17)
+}
+
+.score {
+    background-color: #f0f0f0
+}
 
 .time {
     margin-top: 65px;
     gap: 10px;
 }
 
-.side-section { margin-right: 200px }
-.side-section .column { 
+.side-section {
+    margin-right: 200px
+}
+
+.side-section .column {
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
+
 .tracks {
     display: flex;
     flex-direction: row;
@@ -132,37 +152,70 @@ body {
     gap: 20px;
     border-radius: 5px;
 }
+
 .stats {
     display: flex;
     flex-direction: column;
     align-items: baseline;
 }
-.stats p { margin: 0 }
-.stats h2 { margin: 0 }
+
+.stats p {
+    margin: 0
+}
+
+.stats h2 {
+    margin: 0
+}
 
 .icons {
     width: 50px;
     height: 50px;
     border-radius: 5px;
 }
-.icon-calorie { background-color:  rgb(239 177 177)}
-.icon-protein { background-color:  rgb(177 177 239)}
-.icon-carbo { background-color:  rgb(220 220 144);}
-.icon-lipid { background-color:  rgb(253 216 211)}
 
-.calorie { color: red }
-.protein { color: blue }
-.carbo { color: yellow }
-.lipid { color: salmon }
+.icon-calorie {
+    background-color: rgb(239 177 177)
+}
 
-.tracks { background-color: #f0f0f0 }
+.icon-protein {
+    background-color: rgb(177 177 239)
+}
+
+.icon-carbo {
+    background-color: rgb(220 220 144);
+}
+
+.icon-lipid {
+    background-color: rgb(253 216 211)
+}
+
+.calorie {
+    color: red
+}
+
+.protein {
+    color: blue
+}
+
+.carbo {
+    color: yellow
+}
+
+.lipid {
+    color: salmon
+}
+
+.tracks {
+    background-color: #f0f0f0
+}
 
 .icon-column {
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
-  .icon-container {
+}
+
+.icon-container {
     width: 64px;
     height: 64px;
     border-radius: 6px;
@@ -171,6 +224,27 @@ body {
     align-items: center;
     margin-bottom: 10px;
     background-color: #fff;
-  }
-  .icon-container svg { color: red }
+}
 
+.icon-container svg {
+    color: red
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.loading-circle {
+    border: 5px solid #f3f3f3;
+    border-top: 5px solid #ff0000;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite;
+}
