--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,5 @@
 * {
     font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-
 }
 
 body {
@@ -12,34 +10,36 @@ body {
 .header {
     display: flex;
     align-items: center;
+    flex-direction: row-reverse;
+    justify-content: space-between;
     background-color: #000;
     color: white;
-    padding: 10px;
+    padding: 10px 20px; 
     top: 0;
     left: 0;
     right: 0;
-    height: 5vh;
+    height: 10vh;
+    gap: 30px;
 }
 
-.logo {
-    margin-right: 20px
+.header .logo {
+    height: 50px; /* Adjust as needed */
+    width: auto;
 }
 
 .header ul {
+    flex: 3;
     list-style: none;
     display: flex;
+    justify-content: space-around;
     margin: 0;
     padding: 0;
 }
 
 .header li {
-    margin-right: 20px;
+    margin-right: 30px;
     cursor: pointer;
-}
-
-.header .logo {
-    width: 168px;
-    height: auto;
+    font-size: 18px;
 }
 
 .footer {
@@ -74,6 +74,17 @@ body {
 
 .title {
     margin: 50px 0 50px 150px
+}
+.dashboard-title {
+    font-size: 48px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0px;
+}
+.user-name {
+    font-size: 48px;
+    font-weight: 500;
+    color: red;
 }
 
 .container {
@@ -123,7 +134,9 @@ body {
 }
 
 .score {
-    background-color: #f0f0f0
+    background-color: #f0f0f0;
+    text-align: start !important;
+    padding-left: 10px;
 }
 
 .time {
@@ -164,7 +177,8 @@ body {
 }
 
 .stats h2 {
-    margin: 0
+    margin: 0;
+    font-size: 16px;
 }
 
 .icons {
@@ -229,6 +243,11 @@ body {
 .icon-container svg {
     color: red
 }
+.custom-legend-title {
+        margin-bottom: 10px;
+        color: #000;
+    }
+
 
 @keyframes spin {
     0% {
