--- a/src/styles.css
+++ b/src/styles.css
@@ -257,6 +257,39 @@ body {
     left: 0;
 }
 
+.text-delay {
+    opacity: 0;
+    animation-name: fadeIn;
+    animation-duration: 1s;
+    animation-fill-mode: forwards; 
+    animation-delay: 2s; 
+}
+.title-delay {
+    opacity: 0;
+    animation-name: delayIn;
+    animation-duration: 1s;
+    animation-fill-mode: forwards; 
+    animation-delay: 2s; 
+}
+@keyframes delayIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 0.5;
+    }
+}
+
+
 
 
 @keyframes spin {
