--- a/src/styles.css
+++ b/src/styles.css
@@ -106,20 +106,11 @@ body {
 }
 
 .column {
+    display: flex;
     flex: 1;
     text-align: center;
-}
-
-.activity {
-    height: 300px;
-    background-color: #f0f0f0;
-    color: #000;
-    border-radius: 5px;
-}
-
-.row {
-    display: flex;
-    justify-content: space-between;
+    margin-top: 65px;
+    gap: 10px;
 }
 
 .square {
@@ -128,6 +119,13 @@ body {
     text-align: center;
     width: 258px;
     height: 263px;
+    border-radius: 5px;
+}
+
+.activity {
+    height: 300px;
+    background-color: #f0f0f0;
+    color: #000;
     border-radius: 5px;
 }
 
@@ -145,11 +143,6 @@ body {
     padding-left: 10px;
 }
 
-.time {
-    margin-top: 65px;
-    gap: 10px;
-}
-
 .side-section {
     margin-right: 200px
 }
@@ -159,6 +152,7 @@ body {
     flex-direction: column;
     gap: 10px;
     text-align: center;
+    margin-left: 30px;
 }
 
 .tracks {
@@ -290,9 +284,6 @@ body {
     }
 }
 
-
-
-
 @keyframes spin {
     0% {
         transform: rotate(0deg);
@@ -312,21 +303,23 @@ body {
     animation: spin 2s linear infinite;
 }
 
-@media (min-width: 1024px) and (max-width: 1440px) {
+@media (min-width: 1024px) and (max-width: 1439px) {
     .container {
         display: flex;
         flex-direction: column;
         margin-left: 40px;
         gap: 20px;
     }
-    .first-section { width: 90%;}
+    .activity { width: 57.5% }
     .icon-container {
         width: 50px;
         height: 50px;
     }
     .title { margin-left: 40px }
-    .side-section .state-track {
+    .container .side-section .state-track {
         display: flex;
         flex-direction: row;
+        margin-left: 0;
+        width: 67%;
     }
 }
